Patch by Mustafizur Rahaman <mustaf.here@gmail.com> on 2011-07-11 Reviewed by James Robinson.

Fix LayoutTests/canvas/philip/tests/2d.composite.uncovered.fill.destination-atop.html
https://bugs.webkit.org/show_bug.cgi?id=48292

and

Fix LayoutTests/canvas/philip/tests/2d.composite.uncovered.pattern.destination-atop.html
https://bugs.webkit.org/show_bug.cgi?id=48302

Source/WebCore:

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::shouldDisplayTransparencyElsewhere): Added CompositeDestinationAtop
to draw transparency elsewhere for destination-atop

LayoutTests:

* canvas/philip/tests/2d.composite.uncovered.pattern.destination-atop-expected.txt: Added
a trailing line
* fast/canvas/canvas-composite-alpha.html: Rebaselined for destination-atop test case
* platform/chromium/test_expectations.txt: Removed passing test case
* platform/gtk/Skipped: Ditto
* platform/mac/Skipped: Ditto
* platform/qt/Skipped: Ditto

Canonical link: https://commits.webkit.org/79988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90723 268f45cc-cd09-0410-ab3c-d52691b4dbfc